force-app/main/default/objects/DeploymentFrequency__c/DeploymentFrequency__c.object-meta.xml
<CustomObject>
    <label>Deployment Frequency</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Deployment Frequency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Frequencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>