force-app/main/default/objects/DeploymentFrequency__c/fields/Application_Account__c.field-meta.xml
<CustomField>
    <fullName>Application_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deployment Frequencies</relationshipLabel>
    <relationshipName>Deployment_Frequencies</relationshipName>
    <type>Lookup</type>
</CustomField>