force-app/main/default/objects/DeploymentFrequency__c/fields/Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Image_Id__c</fullName>
    <label>Image Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>