force-app/main/default/objects/DeploymentFrequency__c/fields/Related_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Opp_Amount__c</fullName>
    <label>Related Opp Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>