force-app/main/default/objects/DeploymentFrequency__c/fields/Related_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunities__c</fullName>
    <label>Related Opportunities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>