force-app/main/default/objects/DeploymentFrequency__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deployment Frequencies</relationshipLabel>
    <relationshipName>Deployment_Frequencies</relationshipName>
    <type>Lookup</type>
</CustomField>