force-app/main/default/objects/DeploymentFrequency__c/fields/Time_to_restore__c.field-meta.xml
<CustomField>
    <fullName>Time_to_restore__c</fullName>
    <label>Time to restore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>